Fixed spacing in writing samples panel

--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@ body, html {
 }
 
 .divider:hover {
-  cursor: default; /* Don't show the clickable cursor on hover */
+  cursor: default;
 }
 
 .app .text,
@@ -171,7 +171,7 @@ body, html {
 
 .customHr {
   background-color: black;
-  margin-bottom: 1.5vh;
+  margin: 1.5% 0 1.5% 0;
 }
 
 .codeBar {
@@ -184,17 +184,24 @@ body, html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  align-self: flex-start;
-  justify-content: space-around;
-  height: 75vh;
+  height: 85vh;
   width: 32vw;
   background-size: 100% 100%;
   background-position: center;
   opacity: 0;
   animation: fadeIn 0.5s 0.35s ease-in forwards;
-  padding-top: 4.5vh;
-  padding-bottom: 6.5vh;
-  overflow: scroll;
+  padding: 10% 15% 10% 15%;
+  box-sizing: border-box;
+}
+
+.contentWrapper {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+}
+
+div.section:nth-child(2) {
+  margin: 8% 0 8% 0;
 }
 
 .section {
@@ -202,7 +209,6 @@ body, html {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  width: 22vw;
 }
 
 .linksTitle {
@@ -247,9 +253,11 @@ body, html {
   text-shadow: 0px 0px 1px #000000, 0px 0px 2px #712a1c, -0.5px -1px 1px #000000;
   text-align: left;
   display: inline-block;
+}
+
+div.linkWrapper:nth-child(10) > span:nth-child(1) {
   text-indent: -2em;
   padding-left: 2em;
-  cursor: pointer;
 }
 
 
@@ -446,9 +454,8 @@ div.paragraph.newpresident-paragraph:nth-child(2) {
   padding-top: 0;
   cursor: default;
   background-color: rgba(0, 0, 0, 0.8);
-  opacity: 0;   /* The initial opacity is set to 0 */
-  animation: fadeIn 0.3s ease-in forwards;   /* 'forwards' means the container will retain the style values from the last keyframe when the animation ends */
-  animation-delay: 0.7s;
+  opacity: 0;  
+  animation: fadeIn 0.3s ease-in forwards;
 }
 
 .videoContainer {
@@ -464,7 +471,7 @@ div.paragraph.newpresident-paragraph:nth-child(2) {
   gap: 5vw;
 }
 
-/* targets video elements. */
+
 .videoContainer iframe {
   width: 45vw;
   height: 45vh;
@@ -501,9 +508,9 @@ div.paragraph.newpresident-paragraph:nth-child(2) {
 
 .modal-navigation {
   position: absolute;
-  display: flex; /* Added */
-  align-items: center; /* Added */
-  justify-content: center; /* Added */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   top: 0;
   left: 0;
   width: 100%;
@@ -551,9 +558,9 @@ div.paragraph.newpresident-paragraph:nth-child(2) {
 .tiktokContainer {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap; /* this allows the thumbnails to wrap into new rows as needed */
-  justify-content: center; /* adjust alignment as needed */
-  align-items: stretch; /* ensures that the children occupy full height of the row */
+  flex-wrap: wrap; 
+  justify-content: center; 
+  align-items: stretch; 
   gap: 0.5em;
   cursor: default;
   width: 80vw;
@@ -564,7 +571,7 @@ div.paragraph.newpresident-paragraph:nth-child(2) {
   background-size: cover;
   background-position: center;
   overflow: hidden;
-  flex: 0 0 15%; /* flex-grow, flex-shrink, flex-basis: adjust this to change how much space each thumbnail should try to occupy */
+  flex: 0 0 15%;
   aspect-ratio: 1 / 1;
   cursor: pointer;
   animation: fadeIn 1.5s ease-in;
@@ -612,8 +619,8 @@ div.paragraph.newpresident-paragraph:nth-child(2) {
   position: relative;
   width: 80%; 
   height: 80%; 
-  max-width: 80vw;  /* these values may need to be adjusted */
-  max-height: 80vh; /* these values may need to be adjusted */
+  max-width: 80vw;
+  max-height: 80vh;
 }
 
 .modal-video iframe {
